[tool.poetry]
name = "scrubadubdub"
version = "0.1.0"
description = "A Python package to scrub PII"
authors = ["Kyle McLaren <kylemclaren@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
