[tool.poetry]
name = "scrubadubdub"
version = "v0.2.0"
description = "A Python package to scrub PII"
repository = "https://github.com/kylemclaren/scrub"
authors = ["Kyle McLaren <kylemclaren@protonmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
halo = "^0.0.31"
numpy = "^1.24.2"
spacy = "^3.5.1"
ipaddress = "^1.0.23"
phonenumbers = "^8.13.8"

[tool.poetry.scripts]
scrubadubdub = "scrubadubdub.cli:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
